feat: update environment variables and add favicon
Update environment variables to reflect new API and app hosts. Add favicon to the layout and include "use client" directive in Footer component. Modify footer API to return static data instead of fetching from the server.

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BASE_HOST="https://dev-api.semiliquids.com/api/v2/"
-NEXT_PUBLIC_APP_HOST="https://semiliquids.com/"
+NEXT_PUBLIC_BASE_HOST="https://panel.fundse.ebo-agency.com/api"
+NEXT_PUBLIC_APP_HOST="https://app.semiliquids.com"
